remove tiering config (obsolete)
